--- a/example/templates/example_job_status.html
+++ b/example/templates/example_job_status.html
@@ -11,6 +11,7 @@
   <tbody id="example-job-status-rows"></tbody>
 </table>
 
+<script src="https://cdn.rawgit.com/joewalnes/reconnecting-websocket/fd7c819bb15eeee3452c17e317c0a3664c442965/reconnecting-websocket.min.js"></script>
 <script>
 
 /* Thanks https://docs.djangoproject.com/en/1.10/ref/csrf/ */
@@ -44,7 +45,7 @@ document.getElementById('example-create-job').addEventListener('click', () => {
   post(window.location);
 }, true);
 
-socket = new WebSocket("ws://" + window.location.host + "/job-user/");
+socket = new ReconnectingWebSocket("ws://" + window.location.host + "/job-user/");
 
 socket.onmessage = function(e) {
   var { job_id, title, status } = JSON.parse(e.data);
