Example almost working:  You cannot use AsyncToSync in the same thread as an async event loop - just await the async function directly.

--- a/django_remote_submission/templates/django_remote_submission/job-user-status.html
+++ b/django_remote_submission/templates/django_remote_submission/job-user-status.html
@@ -13,7 +13,7 @@
 <script>
 // Note that the path doesn't matter for routing; any WebSocket
 // connection gets bumped over to WebSocket consumers
-socket = new WebSocket("ws://" + window.location.host + "/job-user/");
+socket = new WebSocket("ws://" + window.location.host + "/ws/job-user/");
 socket.onmessage = function(e) {
   alert(e.data);
 }
