--- a/example/templates/base.html
+++ b/example/templates/base.html
@@ -75,13 +75,11 @@
 
             <ul class="nav navbar-nav navbar-right">
               <li><a href="{% url 'admin:index' %}">Admin</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="{% url 'login' %}">Login</a></li>
-                  <li><a href="{% url 'logout' %}">Logout</a></li>
-                </ul>
-              </li>
+              {% if user.is_authenticated %}
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+              {% else %}
+                <li><a href="{% url 'login' %}">Login</a></li>
+              {% endif %}
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
